# mortgasimapi

./: .gitignore  .vercelignore  DEPLOYMENT.md  LICENSE  README.md  api.py  app.py  main.py  pyproject.toml  requirements.txt  vercel.json
api/: index.py  requirements.txt
data/: chart_data_20241215_153055.json  chart_data_20241215_154620.json  chart_data_20241215_154838.json  chart_data_20241215_154939.json  chart_data_20241215_155128.json  chart_data_20241215_155330.json  chart_data_20241215_155400.json  chart_data_20241215_155504.json  chart_data_20241215_155531.json  chart_data_20241215_155734.json  chart_data_20241215_155859.json  chart_data_20241215_160042.json  chart_data_20241215_160127.json  chart_data_20241215_160208.json  chart_data_20241215_160233.json  chart_data_20241215_160657.json  chart_data_20241215_160813.json  chart_data_20241215_161107.json  chart_data_20241215_161240.json  chart_data_20241215_161310.json  chart_data_20241215_161455.json  chart_data_20241215_161640.json  chart_data_20241215_161706.json  chart_data_20241215_161742.json  chart_data_20241215_161857.json  chart_data_20241215_161925.json  chart_data_20241215_162015.json  chart_data_20241215_163011.json  chart_data_20241215_163304.json  chart_data_20241215_163336.json  chart_data_20241215_163543.json  chart_data_20241215_163645.json  chart_data_20241215_163810.json  chart_data_20241215_163828.json  chart_data_20241215_163856.json  chart_data_20241215_164123.json  chart_data_20241215_164144.json  chart_data_20241215_164253.json  chart_data_20241215_164319.json  chart_data_20241215_164454.json  (+1 more)
tests/: test_integration.py  test_mortgage.py  test_savings_accounts.py
